# CreditCardRL

./: .gitignore  .pyre_configuration  README.md  pyproject.toml  pyrightconfig.json  requirements.txt  run_eval.py
configs/eval/: eval_protocol.yaml  held_out_test.yaml
configs/train/: dqn_default.yaml  ppo_default.yaml  sac_default.yaml
models/: ppo_config.yaml
models/best/: ppo_config.yaml
results/: comparison_table.csv  comparison_table.md  edge_case_results.csv  edge_case_summary.csv  held_out_per_episode.csv  held_out_per_episode_extended_ranges.csv  held_out_per_episode_high_apr_high_income.csv  held_out_per_episode_low_apr_low_income.csv  held_out_summary.csv  held_out_summary_extended_ranges.csv  held_out_summary_high_apr_high_income.csv  held_out_summary_low_apr_low_income.csv  performance_gap_report.csv  performance_gap_report.md  performance_gap_summary.csv  ppo_vs_avalanche_comparison.csv  ppo_vs_avalanche_comparison.md  ppo_vs_baselines_per_episode.csv  ppo_vs_baselines_summary.csv  ppo_vs_normalized_avalanche_comparison.csv  ppo_vs_normalized_avalanche_comparison.md
scripts/: compare_ppo_vs_normalized_avalanche.py  diagnose_ppo.py  evaluate_held_out.py  evaluate_ppo_vs_baselines.py  generate_report.py  plot_baselines.py  plot_figures.py  report_performance_gap.py  run_baselines.py  run_edge_case_tests.py  sanity_check.py  train_ppo.py
src/: __init__.py
src/agents/: __init__.py  callbacks.py
src/baselines/: __init__.py  avalanche.py  base_policy.py  snowball.py  (+3 more)
tests/: test_baselines.py  test_env.py  test_financial_model.py  test_reward.py
(+10 files in other folders)
