[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "credit-rl"
version = "0.1.0"
description = "RL agent for optimal credit card debt payment allocation"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    "gymnasium>=0.29",
    "stable-baselines3>=2.3",
    "torch>=2.0",
    "numpy>=1.24",
    "pyyaml>=6.0",
    "matplotlib>=3.7",
    "pandas>=2.0",
    "scipy>=1.11",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py310"
